src/index.css
@import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";

:root{
  --cp-black: #222831;
  --cp-gray: #393E46;
  --cp-light-blue: #00ADB5;
  --cp-dark-blue: #007EA7;
  --cp-white: #EEEEEE;
}


body {
  background-color: var(--cp-black);
  color: var(--cp-white);
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

header {
  display:flex;
  flex-direction: row;
  align-content: center;
  justify-content: space-between;
  padding: 0.5rem;
  background-color: #fafafa;
  color: #000;
}

nav ul{
  list-style: none;
  display: flex;
  flex-direction: row;
}
nav ul li{
  padding: 1rem;
}

a{
  text-decoration: none;
  color: #000;
}

.nav-active{
  color: rgb(35, 58, 161);
  pointer-events: none;
}
.prevent-scroll{
  overflow-y: hidden;
}

